fix for quick links overlaping with image

--- a/app/assets/stylesheets/fullscreen-slider.scss
+++ b/app/assets/stylesheets/fullscreen-slider.scss
@@ -2,8 +2,8 @@
     .bg_image_holder{
       position: absolute;
       height: 80%;
-      width: 82%;
-      top: 58%;
+      width: 80%;
+      top: 60%;
       left: 50%;
       -webkit-background-size: cover !important;
       background-size: cover !important;
@@ -84,9 +84,9 @@
     }
 
     #hero-container .bg_image_holder {
-        height: 50%;
+        height: 48%;
         width: 100%;
-        top: 75%;
+        top: 77%;
     }
     #apt-search-form.other{
         margin: 0 0px !important;
